Fix release packaging excludes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,10 @@ jobs:
           rm -rf dist
           mkdir -p dist/ralph
           rsync -a \
-            --exclude '.git' \
-            --exclude '.github' \
-            --exclude 'dist' \
-            --exclude 'tests' \
+            --exclude '/.git' \
+            --exclude '/.github' \
+            --exclude '/dist' \
+            --exclude '/tests' \
             bin \
             .agents \
             skills \
